--- a/application/src/Components/BarChart/index.css
+++ b/application/src/Components/BarChart/index.css
@@ -10,7 +10,7 @@
     width: 80%;
     max-width: 800px;
     margin: 20px;
-    border: 1px solid #985454;
+    border: 1px solid #712d2d;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     background-color: #fff;
